feat(functions): add us-east4 helloWorld and hosting rewrite to /api/hello

--- a/firebase.json
+++ b/firebase.json
@@ -16,6 +16,7 @@
       "**/node_modules/**"
     ],
     "rewrites": [
+      { "source": "/api/hello", "function": { "functionId": "helloWorld", "region": "us-east4" } },
       { "source": "**", "destination": "/index.html" }
     ]
   },
