--- a/functions/package.json
+++ b/functions/package.json
@@ -12,10 +12,9 @@
     "build": "echo \"no build\""
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "axios": "^1.7.7",
     "firebase-admin": "^12.5.0",
     "firebase-functions": "^4.5.0"
   }
 }
-
-
