feat: complete daily briefing UI and update README

--- a/firebase.json
+++ b/firebase.json
@@ -24,6 +24,13 @@
         }
       },
       {
+        "source": "/api/briefing",
+        "function": {
+          "functionId": "getDailyBriefing",
+          "region": "us-east4"
+        }
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
