feat: Add portfolio simulator, caching system, and UX enhancements
- Added portfolio simulator with buy/sell functionality
- Implemented Firebase Authentication with Google Sign-In
- Added transaction history tracking
- Implemented caching system for stock prices (5min), daily briefing (1hr), and Magnificent 7 (5min)
- Added smart fallback to cached data when API rate limits are hit
- Improved UX with loading states, success animations, and error handling
- Updated Firestore security rules for user data and cache access
- Added comprehensive setup documentation
- Fixed HTTP 503 errors in Magnificent 7 banner with caching

--- a/firebase.json
+++ b/firebase.json
@@ -31,10 +31,42 @@
         }
       },
       {
+        "source": "/api/magnificent7",
+        "function": {
+          "functionId": "getMagnificent7",
+          "region": "us-east4"
+        }
+      },
+      {
+        "source": "/api/stockPrice",
+        "function": {
+          "functionId": "getStockPrice",
+          "region": "us-east4"
+        }
+      },
+      {
+        "source": "/api/buyStock",
+        "function": {
+          "functionId": "buyStock",
+          "region": "us-east4"
+        }
+      },
+      {
+        "source": "/api/sellStock",
+        "function": {
+          "functionId": "sellStock",
+          "region": "us-east4"
+        }
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
   },
   "emulators": {
     "functions": {
