--- a/firebase.json
+++ b/firebase.json
@@ -59,6 +59,13 @@
         }
       },
       {
+        "source": "/api/portfolioHistory",
+        "function": {
+          "functionId": "getPortfolioHistory",
+          "region": "us-east4"
+        }
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
