Add watchlist feature - users can add/remove stocks to watchlist with real-time price updates

--- a/firebase.json
+++ b/firebase.json
@@ -66,6 +66,20 @@
         }
       },
       {
+        "source": "/api/addToWatchlist",
+        "function": {
+          "functionId": "addToWatchlist",
+          "region": "us-east4"
+        }
+      },
+      {
+        "source": "/api/removeFromWatchlist",
+        "function": {
+          "functionId": "removeFromWatchlist",
+          "region": "us-east4"
+        }
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
