feat: Add Explain It and Stock Recommendation features with company name search
- Implement explainCompany Cloud Function: AI-powered company explanations
  - Fetches company data from Alpha Vantage OVERVIEW endpoint
  - Uses Gemini AI to generate beginner-friendly explanations
  - Returns company info, sector, industry, and current price

- Implement getStockRecommendation Cloud Function: AI stock analysis
  - Analyzes stocks and provides BUY/HOLD/SELL recommendations
  - Returns confidence, reasoning, key points, risk level, time horizon
  - Includes educational disclaimer

- Add company name search functionality
  - New searchSymbol helper function using Alpha Vantage SYMBOL_SEARCH
  - Smart detection: tries symbol first, then searches by name
  - Filters for US stocks (Equity/ETF) and prioritizes best matches
  - Both explainCompany and getStockRecommendation now accept symbols or names

- Frontend enhancements
  - Add Explain It section with search and results display
  - Add Stock Recommendation section with comprehensive analysis display
  - Updated placeholders to show both symbol and name examples
  - Show 'other matches' when multiple companies found
  - Improved error messages and UX

- Update firebase.json with new API routes
  - /api/explainCompany
  - /api/stockRecommendation

- Update progress.md with latest feature documentation

--- a/firebase.json
+++ b/firebase.json
@@ -80,6 +80,20 @@
         }
       },
       {
+        "source": "/api/explainCompany",
+        "function": {
+          "functionId": "explainCompany",
+          "region": "us-east4"
+        }
+      },
+      {
+        "source": "/api/stockRecommendation",
+        "function": {
+          "functionId": "getStockRecommendation",
+          "region": "us-east4"
+        }
+      },
+      {
         "source": "**",
         "destination": "/index.html"
       }
